src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__case_condition_used_outside_case_statement.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E079]: Case condition used outside of case statement! Did you mean to use ';'?
  ┌─ <internal>:6:13
  │
6 │             var1 := TOD#20:15:30:123;
  │             ^^^^^^^^^^^^^^^^^^^^ Case condition used outside of case statement! Did you mean to use ';'?

error[E079]: Case condition used outside of case statement! Did you mean to use ';'?
  ┌─ <internal>:7:13
  │
7 │             23:
  │             ^^ Case condition used outside of case statement! Did you mean to use ';'?
